added these annoying files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ code/data/
 !code/data/ECG5000/ECG5000_TEST.tsv
 !code/data/ECG5000/TRAIN.tsv
 !code/data/ECG5000/README.md
+# Python bytecode files
+__pycache__/
+*.py[cod]
