--- a/environment.yaml
+++ b/environment.yaml
@@ -4,7 +4,7 @@ channels:
   - defaults
 dependencies:
   - python=3.11
-  - numpy
+  - numpy =1.24
   - pandas
   - scikit-learn
   - matplotlib
@@ -17,3 +17,4 @@ dependencies:
       - tensorflow==2.12.0
       - wildboar
       - dtaidistance
+      - fastdtw
