--- a/environment.yaml
+++ b/environment.yaml
@@ -14,6 +14,7 @@ dependencies:
   - aeon
   - pip             # so pip installs in this env
   - ca-certificates
+  - fastdtw
   - pip:
       - tensorflow==2.12.0
       - wildboar
